# eurostat-mcp

./: .gitignore  README.md  pyproject.toml  server.py
examples/: claude_code_settings.json  claude_desktop_config.json
