[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eurostat-mcp"
version = "0.1.0"
description = "MCP server for querying Eurostat European statistics APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "eurostat", "statistics", "europe", "data", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/eurostat-mcp"
Repository = "https://github.com/YOUR_USERNAME/eurostat-mcp"
Issues = "https://github.com/YOUR_USERNAME/eurostat-mcp/issues"

[project.scripts]
eurostat-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
